# modonome

./: .gitignore  .npmignore  ADOPTION-GUIDE.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODEX.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  ENTERPRISE.md  EU-AI-ACT-CLASSIFICATION.md  GOVERNANCE.md  GOVERNED-AUTONOMY-SPEC.md  LICENSE  QUICKSTART.md  RATCHET-SPEC.md  README.md  RELEASE-EVIDENCE.md  ROADMAP.md  SECURITY.md  VITEST-CSWSH-FIX-IMPLEMENTATION.md  VITEST-SECURITY-FIXES-SUMMARY.md  adapters.json  llms.txt  package-lock.json  package.json  vitest-file-read-path-traversal-fix.md  vitest-path-traversal-security.test.ts  vitest-path-validation-utils.ts  vitest-ui-client-fixed.ts  vitest-websocket-cswsh-fix.md  vitest-websocket-security.test.ts  vitest-websocket-setup-fixed.ts
.design-sync/: NOTES.md  config.json  conventions.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.loop/: STATE.md  plan.md
.modonome/: DECISIONS.md  LEARNINGS.md  STATUS.md  config.yaml  control-panel.md  metrics.jsonl  (+1 more)
agent-factory/: .gitignore  AGENTS.md  DECISIONS.md  LEARNINGS.md  README.md  ROADMAP.md  STATUS.md  fleet.config.yaml  pyproject.toml
agent-factory/fleet_runner/: __init__.py  agents.py  briefs.py  config.py  crew.py  llms.py  registry.py  run_one.py  scheduler.py  tools.py  util.py
agent-factory/fleets/: registry.yaml
agent-factory/gateway/: __init__.py  app.py  models.yaml
agent-factory/tests/: test_agents.py  test_briefs.py  test_config.py  test_crew.py  test_registry.py  test_scheduler.py  test_util.py
(+786 files in other folders)
